spacing is fixed, about page works with dropdowns

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -163,6 +163,14 @@ a p:hover {
     background-size: auto 100%;
     position: block;
     color: var(--darkblue);
+        /* padding-top: 600px;  */
+}
+
+#hero, #about, #timeline, #submit, #schedule {
+    display: flex;
+    align-items:center;
+    height: 100vh;
+    justify-content: center;
 }
 
 #footer {
@@ -263,6 +271,12 @@ a p:hover {
   }
 
 h4 {
+    font-family: 'InLI';
+    size: 20px;
+    /* padding-top: 35px; */
+}
+
+.timeline-title {
     font-family: 'InLI';
     size: 20px;
     padding-top: 35px;
@@ -380,7 +394,7 @@ h4 {
 .title-img {
     width: 85%; 
     height: auto;
-    padding-bottom: 50px;
+    padding-bottom: 35px;
 }
 
 #about .container-fluid {
@@ -656,7 +670,7 @@ h4 {
 @media (max-width: 768px) {
 
     body {
-        padding-top: 70px; 
+        /* padding-top: 70px;  */
         padding-bottom: 70px;
         background-color: #EBEBEB;
     }
@@ -685,7 +699,7 @@ h4 {
 
     .submit-button {
         padding: 10px;
-        width: 130px;
+        width: 200px;
         /* font-family: 'InL';
         font-size: 20px; */
         /* padding: 6px 10px; */
@@ -693,14 +707,18 @@ h4 {
         border-width: 1px;
         color: black;
         cursor: pointer;
-        margin: 5px;
+        margin: 20px;
         margin-top: 15px;
         border-radius: 25px;
         transition: background-color 0.5s ease, color 0.5s ease;
     }
 
     #submit, #schedule, #about {
-        padding-top: 600px; 
+        /* padding-top: 600px;  */
+        display: flex;
+        align-items:center;
+        height: 100vh;
+        justify-content: unset;
     }
 
     h4.date-title {
@@ -716,6 +734,14 @@ h4 {
         padding-bottom: 35px;
     }
 
+    .content {
+        display: none;
+    }
+    
+    .content.open {
+        display: block;
+    }
+
     .box p {
         display: none;
         /* transition: max-height 0.3s ease;
@@ -728,6 +754,14 @@ h4 {
         /* max-height: 1000px;  */
     }
 
+    /* .content {
+        display: none;
+    }
+
+    .open {
+        display: block;
+    } */
+
     .box h3:after {
         content: '\25bc';
         float: right;
@@ -739,6 +773,16 @@ h4 {
     .box.active h3:after {
         transform: rotate(180deg);
     }
+
+    .inner-box {
+        display: inline; 
+        width: unset;
+    }
+
+    #about h3 {
+        padding-bottom: 0px;
+    }
+
         
 }
 
